// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotFound component should render correctly with is404 prop 1`] = `
<div>
  <main
    class="main"
  >
    <div
      class="notFoundProductContainer"
    >
      <p
        class="notFoundText"
      >
        Oops, the page you are trying to reach doesn't exist
      </p>
      <p
        class="notFoundText"
      >
        Sorry for the inconveniences
      </p>
    </div>
  </main>
</div>
`;

exports[`NotFound component should render correctly with isIndex prop 1`] = `
<div>
  <main
    class="main"
  >
    <div
      class="headerContainer"
    >
      <div
        class="ratingsContainer"
      >
        <div
          class="container"
        >
          <div
            class="titleContainer"
          >
            <p
              class="huge"
            >
              Custom stickers
            </p>
          </div>
          <div
            class="reviewsContainer huge"
          >
            <div
              class="starsContainer"
            >
              <img
                alt="Full star"
                class="starItem"
                data-nimg="1"
                decoding="async"
                fetchpriority="high"
                height="17"
                src="/ratings/full-star.svg"
                style="color: transparent;"
                width="17"
              />
              <img
                alt="Full star"
                class="starItem"
                data-nimg="1"
                decoding="async"
                fetchpriority="high"
                height="17"
                src="/ratings/full-star.svg"
                style="color: transparent;"
                width="17"
              />
              <img
                alt="Full star"
                class="starItem"
                data-nimg="1"
                decoding="async"
                fetchpriority="high"
                height="17"
                src="/ratings/full-star.svg"
                style="color: transparent;"
                width="17"
              />
              <img
                alt="Full star"
                class="starItem"
                data-nimg="1"
                decoding="async"
                fetchpriority="high"
                height="17"
                src="/ratings/full-star.svg"
                style="color: transparent;"
                width="17"
              />
              <img
                alt="Full star"
                class="starItem"
                data-nimg="1"
                decoding="async"
                fetchpriority="high"
                height="17"
                src="/ratings/full-star.svg"
                style="color: transparent;"
                width="17"
              />
            </div>
            <p>
              155,761 reviews
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="notFoundIndexContainer"
    >
      <p
        class="notFoundText"
      >
        We could not load any product right now, try again later
      </p>
      <p
        class="notFoundText"
      >
        Sorry for the inconveniences
      </p>
    </div>
  </main>
</div>
`;

exports[`NotFound component should render correctly without props 1`] = `
<div>
  <main
    class="main"
  >
    <div
      class="notFoundProductContainer"
    >
      <p
        class="notFoundText"
      >
        We could not load any product information right now, try again later
      </p>
      <p
        class="notFoundText"
      >
        Sorry for the inconveniences
      </p>
    </div>
  </main>
</div>
`;
